--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 
+<meta http-equiv="Refresh" content="0; url=https://arijitsh.github.io">
+
 <!DOCTYPE html>
 <html lang="en">
 <meta charset="utf-8"/>
